added more files

--- a/package.json
+++ b/package.json
@@ -4,6 +4,25 @@
     "dotenv": "^16.5.0",
     "env": "^0.0.2",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2"
-  }
+    "mongoose": "^8.13.2",
+    "nodemon": "^3.1.9"
+  },
+  "name": "sba-319",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stphnrosa/SBA319.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stphnrosa/SBA319/issues"
+  },
+  "homepage": "https://github.com/stphnrosa/SBA319#readme",
+  "description": ""
 }
