--- a/319-app/package.json
+++ b/319-app/package.json
@@ -4,11 +4,13 @@
     "dotenv": "^16.5.0",
     "env": "^0.0.2",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9"
   },
   "name": "sba-319",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
