--- a/319-app/package.json
+++ b/319-app/package.json
@@ -11,7 +11,7 @@
   "name": "sba-319",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
