--- a/319-app/package.json
+++ b/319-app/package.json
@@ -13,7 +13,10 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+    
   },
   "repository": {
     "type": "git",
